Linked Explore Section

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
           <p>EXPLORE</p>
         </div>
         <div class="link-container">
-          <span class="pens">Pens</span>
-          <span class="projects">Project</span>
-          <span class="posts">Posts</span>
-          <span class="collections">Collections</span>
+          <a href="#"><span class="pens">Pens</span></a>
+          <a href=""><span class="projects">Project</span></a>
+          <a href=""><span class="posts">Posts</span></a>
+          <a href=""><span class="collections">Collections</span></a>
           <span class="spark">Spark &#8744;</span>
         </div>
       </div>
