Added Hand wave emoji

--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
 
       <div class="nav-bar-right">
         <div class="nav-create">
-          <button class="button-create">Create
-          <span class="drop-down">
-            <i class="fa-solid fa-angle-down"></i>
-          </span>
-        </button>
+          <button class="button-create">
+            Create
+            <span class="drop-down">
+              <i class="fa-solid fa-angle-down"></i>
+            </span>
+          </button>
         </div>
         <div class="search-img">
           <i class="fa-solid fa-magnifying-glass"></i>
@@ -80,8 +81,9 @@
               environment</span
             >
             for front-end designers <br />
-            and developers.
-            <i class="fa-regular fa-hand-peace"></i>
+            and developers.&#128075;
+
+            <!-- <i class="fa-regular fa-hand-peace"></i> -->
           </p>
         </div>
         <div class="text2">
